fix z-index position

--- a/src/assets/sass/sections/header.sass
+++ b/src/assets/sass/sections/header.sass
@@ -22,11 +22,13 @@
 
   &._sticky
     position: sticky
-    z-index: 9999
+    z-index: 18
     top: 0
 
   ~ section[class^="b-"]
     z-index: 1
+    &._section-active
+      z-index: 19
 
   .b-sandbox
     min-height: 5rem !important
